Fixed lyrics, app cpu usage and artUri => extras when creating MediaItem

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,6 +57,8 @@
 		<string>audio</string>
 		<string>fetch</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>No need but gettings error so trying to fix it.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
