--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,7 +70,7 @@ dependencies:
   sqflite: ^2.3.3+1
   audio_session: ^0.1.21
   volume_controller: ^2.0.7
-  flutter_swipe_action_cell: ^3.1.4
+  flutter_swipe_action_cell: ^3.1.3
   shimmer: ^3.0.0
   cached_network_image: ^3.4.0
   modal_bottom_sheet: ^3.0.0
@@ -86,7 +86,7 @@ dependencies:
       url: https://github.com/appinteractive/just_audio.git
       ref: 555e945d219be8c91dcdda198c0a2a495f6e9f1a
       path: just_audio
-  super_drag_and_drop: ^0.8.22
+  pull_down_button: ^0.10.1
 
 dependency_overrides:
   fading_edge_scrollview: ^4.1.1
