--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,11 @@ dependencies:
   marquee: ^2.2.3
   html_unescape: ^2.0.0
   mini_music_visualizer: ^1.1.4
-  interactive_slider: ^0.2.2
+  #interactive_slider: ^0.4.0
+  interactive_slider:
+    git:
+      url: https://github.com/GoranSustekJr/interactive_slider.git
+      ref: main
   drop_shadow_image: ^0.9.1
   real_volume: ^1.0.8
   audio_video_progress_bar: ^2.0.3
@@ -88,6 +92,7 @@ dependencies:
       #path: just_audio
   pull_down_button: ^0.10.1
   animated_reorderable_list: ^1.1.1
+  infinite_scroll_pagination: ^4.0.0
 
 dependency_overrides:
   fading_edge_scrollview: ^4.1.1
