--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,8 @@ dependencies:
   marquee: ^2.2.3
   html_unescape: ^2.0.0
   mini_music_visualizer: ^1.1.4
-  #interactive_slider: ^0.4.0
-  interactive_slider:
+  interactive_slider: ^0.4.0
+  interactive_slider_fork:
     git:
       url: https://github.com/GoranSustekJr/interactive_slider.git
       ref: main
