--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   spotify_api: ^3.0.0
   web_socket_channel: ^3.0.0
   in_app_notification: ^1.1.2
-  just_audio: ^0.9.41
+  #just_audio: ^0.9.41
   audio_service: ^0.18.15
   provider: ^6.1.2
   path_provider: ^2.1.3
@@ -85,14 +85,17 @@ dependencies:
   flex_color_scheme: ^7.3.1
   connectivity_plus: ^6.0.5
   blurhash_ffi: ^1.2.6
-  #just_audio:
-   # git:
-    #  url: https://github.com/appinteractive/just_audio.git
-     # ref: 555e945d219be8c91dcdda198c0a2a495f6e9f1a
-      #path: just_audio
+  just_audio:
+    git:
+      url: https://github.com/appinteractive/just_audio.git
+      ref: 555e945d219be8c91dcdda198c0a2a495f6e9f1a
+      path: just_audio
   pull_down_button: ^0.10.1
   animated_reorderable_list: ^1.1.1
   infinite_scroll_pagination: ^4.0.0
+  background_fetch: ^1.3.7
+  flutter_animate: ^4.5.0
+  
 
 dependency_overrides:
   fading_edge_scrollview: ^4.1.1
