Added the feature to create online playlists and add to them, created sync time delay history so it can be saved

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -124,8 +124,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/placeholder.png
     - assets/images/pongo_background_10k.png
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
