--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ dependencies:
   sqflite: ^2.3.3+1
   audio_session: ^0.1.21
   volume_controller: ^2.0.7
-  flutter_swipe_action_cell: ^3.1.3
+  flutter_swipe_action_cell: ^3.1.5
   shimmer: ^3.0.0
   cached_network_image: ^3.4.0
   modal_bottom_sheet: ^3.0.0
@@ -95,6 +95,8 @@ dependencies:
   infinite_scroll_pagination: ^4.0.0
   background_fetch: ^1.3.7
   flutter_animate: ^4.5.0
+  flutter_image_compress: ^2.3.0
+  image_cropper: ^8.0.2
   
 
 dependency_overrides:
