--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,11 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   http: ^1.2.1
   google_sign_in: ^6.2.1
-  scroll_to_index: ^3.0.1
+  #scroll_to_index: ^3.0.1
+  scroll_to_index:
+    git:
+      url: https://github.com/GoranSustekJr/scroll-to-index.git
+      ref: master
   material_segmented_control: ^5.0.1
   custom_sliding_segmented_control: ^1.8.3
   image_picker: ^1.1.2
