--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,7 @@ dependencies:
   flutter_animate: ^4.5.0
   flutter_image_compress: ^2.3.0
   image_cropper: ^8.0.2
+  flutter_staggered_animations: ^1.1.1
   
 
 dependency_overrides:
