--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,7 @@ dependencies:
   html_unescape: ^2.0.0
   mini_music_visualizer: ^1.1.4
   interactive_slider: ^0.4.0
-  interactive_slider_fork:
+  interactive_slider_path:
     git:
       url: https://github.com/GoranSustekJr/interactive_slider.git
       ref: main
