--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -108,6 +108,7 @@ dependencies:
   device_info_plus: ^10.1.2
   intro_slider: ^4.2.1
   sticky_az_list: ^0.0.7
+  google_mobile_ads: ^5.2.0
 
   
 
