--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,8 @@ dependencies:
   sticky_az_list: ^0.0.7
   google_mobile_ads: ^5.2.0
   sign_in_with_apple: ^6.1.4
+  #in_app_purchase: ^3.2.1
+  flutter_inapp_purchase: ^5.6.1
   in_app_purchase: ^3.2.1
 
   
