Fixed an issue with the image and with search

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,11 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            // [required] background_fetch
+            url "${project(':background_fetch').projectDir}/libs"
+        }
+
     }
 }
 
