--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     constant_identifier_names: ignore
+    deprecated_member_use: ignore
     must_be_immutable: ignore
     use_build_context_synchronously: ignore
 include: package:flutter_lints/flutter.yaml
