--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -26,6 +26,8 @@
 		<string>$(FLUTTER_BUILD_NAME)</string>
 		<key>CFBundleSignature</key>
 		<string>????</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>App requires access to the microphone.</string>
 		<key>CFBundleURLTypes</key>
 		<array>
 			<dict>
@@ -73,7 +75,6 @@
 			<string>audio</string>
 			<string>fetch</string>
 			<string>processing</string>
-			<string>background-processing</string>
 		</array>
 		<key>UILaunchStoryboardName</key>
 		<string>LaunchScreen</string>
