--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,9 +85,8 @@ dependencies:
   modal_bottom_sheet: ^3.0.0
   permission_handler: ^11.3.1
   flutter_local_notifications: ^18.0.1
-  macos_ui: ^2.0.8
+  macos_ui: ^2.1.10
   flutter_cache_manager: ^3.4.1
-  flex_color_scheme: ^7.3.1
   connectivity_plus: ^6.0.5
   blurhash_ffi: ^1.2.6
   #just_audio:
@@ -114,6 +113,8 @@ dependencies:
   flutter_inapp_purchase: ^5.6.1
   in_app_purchase: ^3.2.1
   pdfx: ^2.8.0
+  googleapis_auth: ^1.6.0
+  url_launcher: ^6.3.1
 
   
 
