--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,10 @@ dependencies:
   http: ^1.2.1
   google_sign_in: ^6.2.1
   #scroll_to_index: ^3.0.1
+  in_app_notification_desktop:
+    git:
+      url: https://github.com/GoranSustekJr/flutter_in_app_notification.git
+      ref: main
   scroll_to_index:
     git:
       url: https://github.com/GoranSustekJr/scroll-to-index.git
@@ -191,6 +195,7 @@ flutter:
     - assets/pdf/Terms_and_conditions_Pongo.pdf
     - assets/icons/shazam.png
     - assets/images/pongo_icon_macos.png
+    - assets/images/pongo_white_red_background_10k.png
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
