--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,6 +121,7 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_desktop_context_menu: ^0.2.0
   star_menu: ^4.0.1
+  flutter_cube: ^0.1.1
 #  ffmpeg_kit_flutter: ^6.0.3
 
   
