--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -126,6 +126,7 @@ dependencies:
   figma_spring_curve: ^1.0.0+1
   liquid_glass: ^0.0.2
   liquid_glass_renderer: ^0.1.1-dev.9
+  soft_edge_blur: ^0.1.3
 #  ffmpeg_kit_flutter: ^6.0.3
 
   
